Add meta tags for description and keywords

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Meta tags for search engines -->
+     <meta name="description" content="In Memory of Friedrich Zawrel. Survivor of the Nazi euthanasia crimes on children in Vienna. Biography and course materials.">
+     <meta name="keywords" content="Friedrich Zawrel, biography, euthanasia, national socialism in Austria, Aktion T-4, Am Spiegelgrund, Nazi crimes, continuity of Nazi collaborators after 1945, denazification, Nazi collaborators, medical ethics">
     <!-- Title -->
     <title>In Memory of Friedrich Zawrel</title>
     <!-- Favicon -->
