--- a/index.html
+++ b/index.html
@@ -17,6 +17,14 @@
 </head>
 
 <body>
+    <!-- Header -->
+    <header>Header</header>
+
+    <!-- Main content-->
+    <main>Main content</main>
+
+    <!-- Footer -->
+     <footer>Footer</footer>
 
 </body>
 
