--- a/index.html
+++ b/index.html
@@ -20,7 +20,12 @@
 
 <body>
     <!-- Header -->
-    <header>Header</header>
+    <header>
+        <a href="index.html">
+            <h1 id="logo">In Memory of Friedrich Zawrel</h1>
+            
+        </a>
+    </header>
 
     <!-- Main content-->
     <main>Main content</main>
