Create nav section

--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Meta tags for search engines -->
-     <meta name="description" content="In Memory of Friedrich Zawrel. Survivor of the Nazi euthanasia crimes on children in Vienna. Biography and course materials.">
-     <meta name="keywords" content="Friedrich Zawrel, biography, euthanasia, national socialism in Austria, Aktion T-4, Am Spiegelgrund, Nazi crimes, continuity of Nazi collaborators after 1945, denazification, Nazi collaborators, medical ethics">
+    <meta name="description"
+        content="In Memory of Friedrich Zawrel. Survivor of the Nazi euthanasia crimes on children in Vienna. Biography and course materials.">
+    <meta name="keywords"
+        content="Friedrich Zawrel, biography, euthanasia, national socialism in Austria, Aktion T-4, Am Spiegelgrund, Nazi crimes, continuity of Nazi collaborators after 1945, denazification, Nazi collaborators, medical ethics">
     <!-- Title -->
     <title>In Memory of Friedrich Zawrel</title>
     <!-- Favicon -->
@@ -14,7 +16,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
     <!-- Stylesheet -->
-     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 
 </head>
 
@@ -23,15 +25,31 @@
     <header>
         <a href="index.html">
             <h1 id="logo">In Memory of Friedrich Zawrel</h1>
-            
         </a>
+
+        <nav>
+            <ul>
+                <li>
+                    <a href="index.html" id="home">Home</a>
+                </li>
+                <li>
+                    <a href="about.html" id="about">About</a>
+                </li>
+                <li>
+                    <a href="resources.html" id="resources">Resources</a>
+                </li>
+                <li>
+                    <a href="guestbook.html" id="guestbook">Guestbook</a>
+                </li>
+            </ul>
+        </nav>
     </header>
 
     <!-- Main content-->
     <main>Main content</main>
 
     <!-- Footer -->
-     <footer>Footer</footer>
+    <footer>Footer</footer>
 
 </body>
 
