--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
         </a>
 
         <nav>
-            <ul>
+            <ul id="menu">
                 <li>
-                    <a href="index.html" id="home">Home</a>
+                    <a href="index.html" id="home" class="active">Home</a>
                 </li>
                 <li>
                     <a href="about.html" id="about">About</a>
