Create intro section with intro-blurb and intro-img divs

--- a/index.html
+++ b/index.html
@@ -46,7 +46,30 @@
     </header>
 
     <!-- Main content-->
-    <main>Main content</main>
+    <main>
+        <section id="introduction">
+            <div id="welcome">
+                <h2>Welcome</h2>
+                <p> This is a little page in memory of Friedrich Zawrel,
+                    Viennese survivor of the Nazi child euthanasia program.
+                    You will learn about key moments in Friedrich Zawrel's
+                    biography with links to more detailed background information.
+                    Zawrel's life story serves not only as witness report to the gruesome
+                    cruelty of medicine and psychiatry under the ideology of "racial hygiene"
+                    but also to the continuity of lucrative careers begun under that ideology that were allowed to
+                    prosper until long after 1945.</p>
+            </div>
+
+            <div id="welcome-image">
+                Image
+            </div>
+
+        </section>
+
+        <section id="">
+
+        </section>
+    </main>
 
     <!-- Footer -->
     <footer>Footer</footer>
