Make navbar dropdown toggle

--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
         <a href="index.html">
             <h1 id="logo">In Memory of Friedrich Zawrel</h1>
         </a>
-
+        <input type="checkbox" name="nav-toggle" id="nav-toggle">
+        <label for="nav-toggle" id="nav-toggle-label">X<i class="fa-solid fa-bars"></i></label>
         <nav>
             <ul id="menu">
                 <li>
@@ -47,10 +48,10 @@
 
     <!-- Main content-->
     <main>
-        <section id="introduction">
-            <div id="welcome">
-                <h2>Welcome</h2>
-                <p> This is a little page in memory of Friedrich Zawrel,
+        <section id="intro">
+            <div id="intro-blurb">
+                <h2>Introduction</h2>
+                <p> This page is in memory of Friedrich Zawrel,
                     Viennese survivor of the Nazi child euthanasia program.
                     You will learn about key moments in Friedrich Zawrel's
                     biography with links to more detailed background information.
@@ -60,7 +61,7 @@
                     prosper until long after 1945.</p>
             </div>
 
-            <div id="welcome-image">
+            <div id="intro-img">
                 Image
             </div>
 
