Push down main, edit intro-blurb

--- a/index.html
+++ b/index.html
@@ -51,14 +51,19 @@
         <section id="intro">
             <div id="intro-blurb">
                 <h2>Introduction</h2>
-                <p> This page is in memory of Friedrich Zawrel,
-                    Viennese survivor of the Nazi child euthanasia program.
-                    You will learn about key moments in Friedrich Zawrel's
-                    biography with links to more detailed background information.
+                <p> This memorial page features key moments in Friedrich Zawrel's
+                    biography.
+                    <br>
                     Zawrel's life story serves not only as witness report to the gruesome
                     cruelty of medicine and psychiatry under the ideology of "racial hygiene"
                     but also to the continuity of lucrative careers begun under that ideology that were allowed to
-                    prosper until long after 1945.</p>
+                    prosper until long after 1945.
+                    <br>
+                    The main text is kept brief and concise but you are welcome to follow the pop-up links to additional
+                    information as you scroll along. You may also want to peruse the link collection under the
+                    "Resources" tab.
+
+                </p>
             </div>
 
             <div id="intro-img">
