Add burger icon, add media query for 768px and up

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
     <!-- Stylesheet -->
     <link rel="stylesheet" href="assets/css/style.css">
+    <!-- Fontawesome -->
+    <script src="https://kit.fontawesome.com/d2a5609cf8.js" crossorigin="anonymous"></script>
 
 </head>
 
@@ -24,10 +26,10 @@
     <!-- Header -->
     <header>
         <a href="index.html">
-            <h1 id="logo">In Memory of Friedrich Zawrel</h1>
+            <h1 id="logo">In Memory of <br/>Friedrich Zawrel</h1>
         </a>
         <input type="checkbox" name="nav-toggle" id="nav-toggle">
-        <label for="nav-toggle" id="nav-toggle-label">X<i class="fa-solid fa-bars"></i></label>
+        <label for="nav-toggle" id="nav-toggle-label"><i class="fa-solid fa-bars"></i></label>
         <nav>
             <ul id="menu">
                 <li>
@@ -79,6 +81,8 @@
 
     <!-- Footer -->
     <footer>Footer</footer>
+
+   
 
 </body>
 
