--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
             <h1 id="logo">In Memory of <br />Friedrich Zawrel</h1>
         </a>
     </header>
-        <!-- <input type="checkbox" name="nav-toggle" id="nav-toggle">
-        <label for="nav-toggle" id="nav-toggle-label"><i class="fa-solid fa-bars"></i></label> -->
+
         <nav>
             <ul id="menu">
                 <li>
@@ -124,7 +123,17 @@
     </main>
 
     <!-- Footer -->
-    <footer>Footer</footer>
+    <footer>
+        <div id="socials-container">
+           <ul id="socials">
+            <li>Find us on:</li>
+            <li><a href="https://www.facebook.com" target="_blank"><i class="fa-brands fa-square-facebook"></i></a></li>
+            <li><a href="https://www.instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
+            <li><a href="https://mastodon.social" target="_blank"><i class="fa-brands fa-mastodon"></i></a></li>
+           <li><a href="https://www.tiktok.com" target="_blank"><i class="fa-brands fa-tiktok"></i></a></li>
+           </ul>
+        </div>
+    </footer>
 
 
 
