Add image to header

--- a/index.html
+++ b/index.html
@@ -25,28 +25,32 @@
 <body>
     <!-- Header -->
     <header>
-        <a href="index.html">
-            <h1 id="logo">In Memory of <br />Friedrich Zawrel</h1>
-        </a>
+        <div id="logo-img"></div>
+        <div id="logo">
+            <a href="index.html">
+                <h1 id="logo">In Memory of <br />Friedrich Zawrel</h1>
+            </a>
+
+        </div>
     </header>
 
-        <nav>
-            <ul id="menu">
-                <li>
-                    <a href="index.html" id="home" class="active">Home</a>
-                </li>
-                <!-- <li>
+    <nav>
+        <ul id="menu">
+            <li>
+                <a href="index.html" id="home" class="active">Home</a>
+            </li>
+            <!-- <li>
                     <a href="about.html" id="about">About</a>
                 </li> -->
-                <li>
-                    <a href="resources.html" id="resources">Resources</a>
-                </li>
-                <li>
-                    <a href="guestbook.html" id="guestbook">Guestbook</a>
-                </li>
-            </ul>
-        </nav>
-   
+            <li>
+                <a href="resources.html" id="resources">Resources</a>
+            </li>
+            <li>
+                <a href="guestbook.html" id="guestbook">Guestbook</a>
+            </li>
+        </ul>
+    </nav>
+
 
     <!-- Main content-->
     <main>
@@ -74,7 +78,7 @@
 
         </section>
 
-        <section id="">
+        <section id="Familie & Schulzeit">
             <div>
                 <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
                     labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores
@@ -125,13 +129,14 @@
     <!-- Footer -->
     <footer>
         <div id="socials-container">
-           <ul id="socials">
-            <li>Find us on:</li>
-            <li><a href="https://www.facebook.com" target="_blank"><i class="fa-brands fa-square-facebook"></i></a></li>
-            <li><a href="https://www.instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
-            <li><a href="https://mastodon.social" target="_blank"><i class="fa-brands fa-mastodon"></i></a></li>
-           <li><a href="https://www.tiktok.com" target="_blank"><i class="fa-brands fa-tiktok"></i></a></li>
-           </ul>
+            <ul id="socials">
+                <li>Find us on:</li>
+                <li><a href="https://www.facebook.com" target="_blank"><i class="fa-brands fa-square-facebook"></i></a>
+                </li>
+                <li><a href="https://www.instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
+                <li><a href="https://mastodon.social" target="_blank"><i class="fa-brands fa-mastodon"></i></a></li>
+                <li><a href="https://www.tiktok.com" target="_blank"><i class="fa-brands fa-tiktok"></i></a></li>
+            </ul>
         </div>
     </footer>
 
