--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
 <body>
     <!-- Header -->
     <header>
-        <div id="logo-img"></div>
-        <div id="logo">
+        <!-- <div id="logo-img"></div> -->
+        <!-- <div id="logo-div"> -->
             <a href="index.html">
                 <h1 id="logo">In Memory of <br />Friedrich Zawrel</h1>
             </a>
 
-        </div>
+        <!-- </div> -->
     </header>
 
     <nav>
