Write blurb for early childhood section

--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
                         of continued resistance.
                     </p>
                     <p class="scroll-down">
-                    </br>
-                    <i class="fa-solid fa-angle-down"></i></p>
+                        </br>
+                        <i class="fa-solid fa-angle-down"></i></p>
                 </div>
                 <!-- <div id="intro-img">
                     <img src="assets/images/friedrich-zawrel-1978.jpg" alt="A picture of Friedrich Zawrel in the newspaper Kurier from Dec 17, 1978">
@@ -79,41 +79,17 @@
 
         </section>
 
-        <section id="family-school" class="light-bg">
-            <div>
-                <p>Familie & Schulzeit
-
-                    Am 27. März 1940 berichtete das Zentralkinderheim an die Kinderübernahmestelle, dass sich Friedrich
-                    Zawrel sehr zu seinem Vorteil verändert habe, sich gut in die Gemeinschaft einfüge und fleißig,
-                    willig und für Arbeiten gut zu verwenden sei. Im Juni 1940 erfolgte eine Verlegung in die
-                    Erziehungsanstalt Mödling, von wo er einen Monat später nach Hause entlassen wurde. Die inzwischen
-                    verheirateten Eltern waren aufgefordert worden, ihre Kinder zu sich zu nehmen. Mit den inzwischen
-                    geborenen Schwestern Helga (* 1938) und Traude (* 1940) waren nun fünf Kinder mit den Eltern in der
-                    Wohnung in der Erdbergstraße 3, die aus zwei kleinen Zimmern, einer Küche und einem kleinen
-                    Vorzimmer bestand. Friedrich musste oft seinen betrunkenen Vater vom Wirtshaus abholen, der nur in
-                    alkoholisiertem Zustand väterliche Gefühle zu zeigen imstande war. Halbwegs nüchtern war er
-                    unnahbar, und Friedrich hatte das Gefühl, für ihn gar nicht zu existieren. Auf so einem Heimweg
-                    beugte er sich, nachdem zwei Wehrmachtsoffiziere an ihnen vorbeigegangen waren, zu Friedrich
-                    hinunter und sagte: „Wenn du zu dem Verein gehst, erschlag ich dich. Aber wenn der Stalin kommt,
-                    darfst zur Roten Armee gehen.“ Wenig später folgte eine Dienstverpflichtung des Vaters in der
-                    Lokomotivfabrik in Floridsdorf, und er bekam eine Vorladung zum Reichsarbeitstreuhänder. Dieser
-                    händigte ihm eine Fibel mit Anweisungen, wie er sich in Zukunft zu verhalten habe, aus und drohte:
-                    „Wenn es die geringste Abweichung davon gibt, haben wir einen Platz in Esterwegen.“ Friedrich erfuhr
-                    von der Mutter, dass der Vater sich aus Angst vor der Zukunft das Leben nehmen wollte. In den
-                    folgenden Jahren hatte der Vater nie einen Rausch, erschien pünktlich zur Arbeit und übergab
-                    entsprechend der Fibel der Mutter das ungeöffnete Lohnsackerl. Da sein Vater als wehrunwürdig
-                    festgestellt wurde, erhielt Friedrich ein Schreiben, dass er von allen der NSDAP angegliederten
-                    Organisationen ausgeschlossen sei. Diese Tatsache an sich kränkte ihn nicht, jedoch der daraus
-                    resultierende Ausschluss aus der Klassengemeinschaft der Hauptschule, da andere Kinder Uniformen
-                    trugen oder zumindest ein HJ-Abzeichen besaßen. Sie fragten ihn aus, warum er nicht zu den
-                    Heimabenden käme, und Friedrich wusste keine Antwort. Die Mitschüler stellten Vermutungen an: „Na
-                    vielleicht darf er nicht, weil er ein Halbjud oder ein 32stel Jud ist.“ „Na, wenn er ein Jud wär,
-                    dann wär‘ er im Konzentrationslager.“ – Diese Aussagen stellte Friedrich Zawrel in seinem späteren
-                    Leben heraus als Beweis dafür, dass die Menschen nicht „nichts gewusst“ haben, denn seine Mitschüler
-                    wussten bereits, dass es Konzentrationslager gab. – Friedrich Zawrel wollte daraufhin nicht mehr in
-                    die Schule gehen und trieb sich auf Märkten oder im Wienerwald herum. Selbst, als seine Mutter ihn
-                    hinbegleiten wollte, lief er ihr davon. Im Bericht des Klassenlehrers, der später auch in einem
-                    Gutachten von Erwin Jekelius zitiert wurde, war zu lesen:[3]
+        <section id="early-childhood" class="light-bg">
+            <div id="childhood-container">
+                div
+                <p>
+                    Friedrich Zawrel's childhood in Vienna is overshadowed by bitter poverty and the alcohol addiction
+                    of his father. Early on he is taken into foster care and spends periods in educational institutions.
+                    During a short-lived return to the family setting in 1940, Friedrich receives a letter that excludes him from joining any NSDAP organizations because of his
+                    father's exemption to serve. This leads to bullying from his classmates when he doesn't join them in the Hitler Youth. He recounts
+                    that the other boys wagered that it couldn't be because he was Jewish because otherwise he'd be in a concentration camp. In his later
+                    years, Zawrel would point out how improbable it was that people weren't aware of the Holocaust, when even little children knew about
+                    it.
                 </p>
             </div>
         </section>
