Split childhood blurb oveer two divs, try to add video background

--- a/index.html
+++ b/index.html
@@ -81,16 +81,40 @@
 
         <section id="early-childhood" class="light-bg">
             <div id="childhood-container">
-                div
-                <p>
-                    Friedrich Zawrel's childhood in Vienna is overshadowed by bitter poverty and the alcohol addiction
-                    of his father. Early on he is taken into foster care and spends periods in educational institutions.
-                    During a short-lived return to the family setting in 1940, Friedrich receives a letter that excludes him from joining any NSDAP organizations because of his
-                    father's exemption to serve. This leads to bullying from his classmates when he doesn't join them in the Hitler Youth. He recounts
-                    that the other boys wagered that it couldn't be because he was Jewish because otherwise he'd be in a concentration camp. In his later
-                    years, Zawrel would point out how improbable it was that people weren't aware of the Holocaust, when even little children knew about
-                    it.
-                </p>
+                <div id="childhood-text-1">
+                    <h2>Childhood</h2>
+                    <p>
+                        Friedrich Zawrel's childhood in Vienna is overshadowed by bitter poverty and the alcohol
+                        addiction
+                        of his father. Early on he is taken into foster care and spends periods in educational
+                        institutions.
+                        During a short-lived return to the family setting in 1940, Friedrich receives a letter that
+                        excludes him from joining any NSDAP organizations because of his
+                        father's exemption to serve.
+                    </p>
+                    <p class="scroll-down">
+                        </br>
+                        <i class="fa-solid fa-angle-down"></i></p>
+                </div>
+                <div id="childhood-text-2">
+
+                    <p> When he doesn't join the Hitler Youth, Friedrich is ostracized and bullied by his
+                        classmates. He recounts that the other boys wagered that the reason for his exclusion couldn't
+                        be
+                        because he was Jewish because in that case "he'd be in a concentration camp". In his later
+                        years,
+                        Zawrel would point out how improbable it was that people weren't aware of the Holocaust, when
+                        even little children knew about it.
+                    </p>
+                    <p class="scroll-down">
+                        </br>
+                        <i class="fa-solid fa-angle-down"></i></p>
+                </div>
+            </div>
+
+            <video autoplay muted loop>
+                <source src="assets/video/hitler-youth-in-austria.mp4" type="video/mp4">
+            </video>
             </div>
         </section>
         <section id="spiegelgrund" class="dark-bg">
