Add bigger bg image in intro section for larger screens

--- a/index.html
+++ b/index.html
@@ -101,10 +101,10 @@
                     <p> When he doesn't join the Hitler Youth, Friedrich is ostracized and bullied by his
                         classmates. He recounts that the other boys wagered that the reason for his exclusion couldn't
                         be
-                        because he was Jewish because in that case "he'd be in a concentration camp". In his later
+                        that he was Jewish because in that case "he'd be in a concentration camp". In his later
                         years,
-                        Zawrel would point out how improbable it was that people weren't aware of the Holocaust, when
-                        even little children knew about it.
+                        Zawrel would point out how improbable it was that the general population wasn't aware of the Holocaust, when
+                        even school children knew about it.
                     </p>
                     <p class="scroll-down">
                         </br>
@@ -112,9 +112,9 @@
                 </div>
             </div>
 
-            <video autoplay muted loop>
+            <!-- <video autoplay muted loop>
                 <source src="assets/video/hitler-youth-in-austria.mp4" type="video/mp4">
-            </video>
+            </video> -->
             </div>
         </section>
         <section id="spiegelgrund" class="dark-bg">
