--- a/resources.html
+++ b/resources.html
@@ -28,7 +28,7 @@
         <!-- <div id="logo-img"></div> -->
         <!-- <div id="logo-div"> -->
             <a href="index.html">
-                <h1 id="logo">In Memory of <br />Friedrich Zawrel</h1>
+                <h1 id="logo">In Memory of Friedrich&nbsp;Zawrel</h1>
             </a>
 
         <!-- </div> -->
