Add background picture to childhood container, write text for Spiegelgrund section

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <div id="childhood-container">
                 <h2>Childhood</h2>
                 <div id="childhood-text-1">
-                    
+
                     <p>
                         Friedrich Zawrel's childhood in Vienna is overshadowed by bitter poverty and the alcohol
                         addiction
@@ -97,6 +97,7 @@
                         </br>
                         <i class="fa-solid fa-angle-down"></i></p>
                 </div>
+
                 <div id="childhood-text-2">
 
                     <p> When he doesn't join the Hitler Youth, Friedrich is ostracized and bullied by his
@@ -104,7 +105,8 @@
                         be
                         that he was Jewish because in that case "he'd be in a concentration camp". In his later
                         years,
-                        Zawrel would point out how improbable it was that the general population wasn't aware of the Holocaust, when
+                        Zawrel would point out how improbable it was that the general population wasn't aware of the
+                        Holocaust, when
                         even school children knew about it.
                     </p>
                     <p class="scroll-down">
@@ -113,15 +115,41 @@
                 </div>
             </div>
 
-            <!-- <video autoplay muted loop>
-                <source src="assets/video/hitler-youth-in-austria.mp4" type="video/mp4">
-            </video> -->
-            </div>
+
         </section>
         <section id="spiegelgrund" class="dark-bg">
-            <div>
-                <p>Surviving am Spiegelgrund.</p>
+            <div id="spiegelgrund-container">
+                <h2>Am Spiegelgrund</h2>
+                <div id="spiegelgrund-text-1">
+
+                    <p>In 1941, Friedrich Zawrel is taken into custody again and transferred to the municipal
+                        educational facility "Am Spiegelgrund" where he spends most of the next three years in an isolation
+                        cell.
+                        He witnesses other patients including children disappearing over night while the resident
+                        doctors
+                        use him to demonstrate to prospective nurses which of his bodily features make him
+                        "lebensunwert" ("unworthy of life").
+                        Am-Spiegelgrund doctor Heinrich Gross tortures Zawrel with "medical" experiments and declares
+                        him "hereditarily and socially inferior". In 1944, a nurse helps Friedrich Zawrel to flee the
+                        institution.
+                    </p>
+                    <p class="scroll-down">
+                        </br>
+                        <i class="fa-solid fa-angle-down"></i></p>
+                </div>
+
+                <div id="spiegelgrund-text-2">
+
+                    <p> "Am Spiegelgrund" was a youth welfare institution on the premises of the medical and care
+                        facility "Am Steinhof" in Wien between 1940 and 1944. The facility comprised an educational home and a psychiatric clinic for children, including a "child specialist department", where sick, disabled and "non-educable"
+                        children were exposed to medical experiments and torture. At least 789 children were murdered. 
+                    </p>
+                    <p class="scroll-down">
+                        </br>
+                        <i class="fa-solid fa-angle-down"></i></p>
+                </div>
             </div>
+
         </section>
         <section id="meeting-gross" class="light-bg">
             <div>
