Set soft hyphens in childhood and spiegelgrund sections

--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@
                 <div id="intro-text">
                     <p> This page is dedicated to the memory of Friedrich Zawrel, whose life story serves witness to
                         the
-                        cruelty of medicine and psychiatry under the ideology of "racial hygiene". It further
+                        cruelty of medicine and psychia&shy;try under the ideology of "racial hygiene". It further
                         illustrates
-                        that this ideology permeates the medical field far beyond 1945 allowing careers begun under
+                        that this ideology permeates the medical field far beyond 1945 al&shy;low&shy;ing careers begun under
                         its
-                        premise to prosper into our current millennium. Above all, it shows the necessity and
-                        importance
+                        premise to prosper into our cur&shy;rent millennium. Above all, it shows the necessity and
+                        impor&shy;tance
                         of continued resistance.
                     </p>
                     <p class="scroll-down">
@@ -87,9 +87,9 @@
                     <p>
                         Friedrich Zawrel's childhood in Vienna is overshadowed by bitter poverty and the alcohol
                         addiction
-                        of his father. Early on he is taken into foster care and spends periods in educational
-                        institutions.
-                        During a short-lived return to the family setting in 1940, Friedrich receives a letter that
+                        of his father. Early on he is ta&shy;ken into foster care and spends periods in educational
+                        institu&shy;tions.
+                        During a short-lived re&shy;turn to the family setting in 1940, Friedrich receives a letter that
                         excludes him from joining any NSDAP organizations because of his
                         father's exemption to serve.
                     </p>
