--- a/index.html
+++ b/index.html
@@ -166,7 +166,10 @@
                     <figure>
                         <img src="assets/images/am-spiegelgrund-areal.jpg"
                             alt="Areal view psychiatric clinic 'Am Steinhof', 1932">
-                        <figcaption>Areal view of the psychiatric clinic 'Am Steinhof', 1932</figcaption>
+                        <figcaption>
+                            Areal view of the psychiatric
+                            </br>clinic 'Am Steinhof', 1932
+                        </figcaption>
                     </figure>
                 </div>
             </div>
@@ -179,31 +182,42 @@
         <section id="meeting-gross" class="light-bg">
 
             <div id="meeting-gross-container">
-                <h2>Meeting Doctor Gross again</h2>
+
                 <div id="meeting-gross-text">
-                    <p>In the following decades, Zawrel struggles to adjust to society and gets caught up in petty
+                    <h2>Meeting Doctor Gross again</h2>
+
+                    <p>In the following decades, Friedrich Zawrel struggles to adjust to society and gets caught up in
+                        petty
                         crime. 30 years after the war, he finds himself facing Am-Spiegelgrund doctor Heinrich Gross at
                         court. Gross had built an impressive career on the base of his "research" at Am Spiegelgrund and
                         is at this time the most requested court psychiatrist in Austria.
-                        <br>
+                    </p>
+                    <br>
+                    <p>
 
                         Facing Gross at court, Zawrel says: "Believe me, I know people, who have committed crimes
                         hundreds of thousands times worse than I, but they are respected persons today, that is in high
                         positions and such."
-                        <br>
+                    </p>
+                    <br>
+                    <p>
 
-                        Gross doesn't understand nor recognize Zawrel, and asks if he has ever been committed to psychiatric
+                        Gross doesn't understand nor recognize Zawrel, and asks if he has ever been committed to
+                        psychiatric
                         care before. Zawrel replies: "Herr Doktor, for an academic, you do have a very bad memory. [...]
                         Herr Doktor, can you even sleep well anymore? Have you already forgotten, the many dead children
                         of Pavillon 15, have you already forgotten the tortured and abused children of Pavillon 17?"
-                        <br>
+                    </p>
+                    <br>
+                    <p>
                         Court psychiatrist Gross claims not to be biased. In the psychiatric appraisal of Zawrel that he
                         composes for the court, he then pleads that Friedrich Zawrel need to be imprisoned permanently
                         in an instutition for dangerous repeat offenders. He bases this appraisal on a psychiatric
                         evaluation that his Am Spiegelgrund colleague Ernst Illing had written in 1943. It attested that
                         Friedrich Zawrel came from "a genetically and sociologically inferior family", "a criminal,
-                        asocial tribe". Illing had been hanged in 1946 for about 200 murders committed at Am Spiegelgrund.
-                      
+                        asocial tribe". Illing had been hanged in 1946 for about 200 murders committed at Am
+                        Spiegelgrund.
+
 
                     </p>
                 </div>
