Add skeleton sections uncovering and eulogy, add guestbook form

--- a/guestbook.html
+++ b/guestbook.html
@@ -54,25 +54,17 @@
 
     <!-- Main content-->
     <main>
+        
+      <section id="guestbook-table" class="light-bg">
+        <h2>Guestbook</h2>
 
-        <h2>Visitor Guestbook</h2>
+        <table>
 
-        If you want to share your thoughts or feelings after reading about Friedrich Zawrel's story, you can do so in the form below. Entries will be added to our guestbook page after review by the page owners. 
-        <form action="guestbook.php" method="post">
-            <label for="name">Name:</label>
-            <input type="text" id="name" name="name">
-        <br>
+        </table>
 
-            <label for="e-mail">E-Mail:</label>
-            <input type="e-mail" id="e-mail" name="name">
-<br>
-            <label for="message">Type your message here:</label>
-            <textarea id="message" name="message" rows="7" cols="15" ></textarea>
+        <p>To leave a message, visit the <a href="">form</a> at the end of the home page.</p>
 
-<br>
-            <input type="submit" value="Send">
-
-        </form>
+      </section>
     </main>
 
     <!-- Footer -->
