--- a/index.html
+++ b/index.html
@@ -25,13 +25,9 @@
 <body>
     <!-- Header -->
     <header>
-        <!-- <div id="logo-img"></div> -->
-        <!-- <div id="logo-div"> -->
         <a href="index.html">
             <h1 id="logo">In Memory of Friedrich&nbsp;Zawrel</h1>
         </a>
-
-        <!-- </div> -->
     </header>
 
     <nav>
@@ -58,6 +54,8 @@
             <div id="intro-container">
 
                 <div id="intro-text">
+                    <h2>Introduction</h2>
+
                     <p> This page is dedicated to the memory of Friedrich Zawrel, whose life story serves witness to
                         the
                         cruelty of medicine and psychia&shy;try under the ideology of "racial hygiene". It further
@@ -70,7 +68,7 @@
                         of continued resistance.
                     </p>
                     <p class="scroll-down">
-                        </br>
+                        <br>
                         <i class="fa-solid fa-angle-down"></i></p>
                 </div>
 
@@ -95,7 +93,7 @@
                         father's exemption to serve.
                     </p>
                     <p class="scroll-down">
-                        </br>
+                        <br>
                         <i class="fa-solid fa-angle-down"></i></p>
                 </div>
 
@@ -111,7 +109,7 @@
                         even school children knew about it.
                     </p>
                     <p class="scroll-down">
-                        </br>
+                        <br>
                         <i class="fa-solid fa-angle-down"></i></p>
                 </div>
             </div>
@@ -136,12 +134,12 @@
                         institution.
                     </p>
                     <p class="scroll-down">
-                        </br>
+                        <br>
                         <i class="fa-solid fa-angle-down"></i></p>
                 </div>
             </div>
 
-            <div id="spiegelgrund-info">
+            <aside id="spiegelgrund-info">
 
                 <div id="spiegelgrund-info-text">
 
@@ -158,7 +156,7 @@
 
 
                     <p class="scroll-down">
-                        </br>
+                        <br>
                         <i class="fa-solid fa-angle-down"></i></p>
 
                 </div>
@@ -168,12 +166,12 @@
                             alt="Areal view psychiatric clinic 'Am Steinhof', 1932">
                         <figcaption>
                             Areal view of the psychiatric
-                            </br>clinic 'Am Steinhof', 1932
+                            <br>clinic 'Am Steinhof', 1932
                         </figcaption>
                     </figure>
                 </div>
-            </div>
-            </div>
+            </aside>
+
 
 
 
@@ -188,7 +186,8 @@
 
                     <p>In the following decades, Friedrich Zawrel struggles to adjust to society and gets caught up in
                         petty
-                        crime. 30 years after the war, he finds himself facing Am-Spiegelgrund doctor Heinrich Gross at
+                        crime. 30 years after the war, he is being tried for property offenses and finds himself facing
+                        Am-Spiegelgrund doctor Heinrich Gross at
                         court. Gross had built an impressive career on the base of his "research" at Am Spiegelgrund and
                         is at this time the most requested court psychiatrist in Austria.
                     </p>
@@ -211,7 +210,7 @@
                     <br>
                     <p>
                         Court psychiatrist Gross claims not to be biased. In the psychiatric appraisal of Zawrel that he
-                        composes for the court, he then pleads that Friedrich Zawrel need to be imprisoned permanently
+                        composes for the court, he then recommends that Friedrich Zawrel be imprisoned permanently
                         in an instutition for dangerous repeat offenders. He bases this appraisal on a psychiatric
                         evaluation that his Am Spiegelgrund colleague Ernst Illing had written in 1943. It attested that
                         Friedrich Zawrel came from "a genetically and sociologically inferior family", "a criminal,
@@ -223,10 +222,85 @@
                 </div>
             </div>
         </section>
-        <section id="eulogy" class="dark-bg">
+
+        <section id="uncovering" class="dark-bg">
             <div>
-                <p>Death of Zawrel, his character and person.</p>
+                <h2>Uncovering the truth</h2>
+                <p>Article in 1978, trials against Gross</p>
+                <div id="spiegelhof-img">
+                    <figure>
+                        <img src="assets/images/friedrich-zawrel-1978-artikel.jpg"
+                            alt="Image of the 1978 newspaper article 'Ein Arzt aus der Mörderklinik' with fotos of Friedrich Zawrel and Heinrich Gross">
+                        <figcaption>
+                            <em>'Convictee recognized NS physician in Austria's most
+                                prominent court psychiatrist Dr. Gross.
+                                A doctor from the NS murderers' clinic.' </em><br>
+                            Kurier, December 17, 1978
+
+                        </figcaption>
+                    </figure>
+                </div>
+
             </div>
+        </section>
+
+        <section id="eulogy" class="light-bg">
+            <div>
+                <h2>Eulogy</h2>
+                <!-- <p>Contribution and legacy of F Zawrel
+                    embed <video src=""></video>
+                    color picture of him and gravestone
+                    picture of bridge? link to report
+
+                </p> -->
+
+                <!-- <figure>
+                    <img src="assets/images/friedrich-zawrel-1978-artikel.jpg"
+                        alt="Image of the 1978 newspaper article 'Ein Arzt aus der Mörderklinik' with fotos of Friedrich Zawrel and Heinrich Gross">
+                    <figcaption>
+                        <em>'Convictee recognized NS physician in Austria's most
+                        prominent court psychiatrist Dr. Gross.
+                        A doctor from the NS murderers' clinic.' </em><br>
+                        Kurier, December 17, 1978
+                    
+                    </figcaption>
+                </figure> -->
+            </div>
+        </section>
+
+        <section id="guestbook-form" class="dark-bg">
+
+            <h2>Leave us a message</h2>
+
+            <p>You can share your thoughts via the form below. Entries will be reviewed before being published on our <a
+                    href="guestbook.html">guestbook page</a>.</p>
+
+
+            <div id="form">
+
+                <form action="guestbook.php" method="post">
+
+                    <div>
+                        <label for="name">Name:</label>
+                        <input type="text" id="name" name="name" class="id">
+                    </div>
+
+                    <div>
+                        <label for="e-mail">E-Mail:</label>
+                        <input type="e-mail" id="e-mail" name="name" class="id">
+                    </div>
+
+                    <div>
+                        <label for="message">Your message:</label>
+                        <textarea id="message" name="message" rows="7" cols="30"></textarea>
+
+                    </div>
+                    <input type="submit" value="Send">
+
+
+                </form>
+            </div>
+
         </section>
     </main>
 
