Fix childhood text 2 overlapping into next section

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
         </section>
 
-        <section id="early-childhood" class="light-bg">
+        <section id="childhood" class="light-bg">
             <div id="childhood-container">
 
                 <h2>Childhood</h2>
