Rename image files, change favicon

--- a/guestbook.html
+++ b/guestbook.html
@@ -62,7 +62,7 @@
 
         </table>
 
-        <p>To leave a message, visit the <a href="">form</a> at the end of the home page.</p>
+        <p>To leave a message, visit the <a href="index.html#guestbook-form" class="violet-link">form</a> at the end of the home page.</p>
 
       </section>
     </main>
