--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                 </div>
                 <div id="spiegelhof-img">
                     <figure>
-                        <img src="assets/images/am-spiegelgrund-areal.jpg"
+                        <img src="assets/images/am-steinhof-areal-1932.jpg"
                             alt="Areal view psychiatric clinic 'Am Steinhof', 1932">
                         <figcaption>
                             Areal view of the psychiatric
@@ -229,7 +229,7 @@
                 <p>Article in 1978, trials against Gross</p>
                 <div id="spiegelhof-img">
                     <figure>
-                        <img src="assets/images/friedrich-zawrel-1978-artikel.jpg"
+                        <img src="assets/images/artikel-kurier-1978-12-17.jpg"
                             alt="Image of the 1978 newspaper article 'Ein Arzt aus der Mörderklinik' with fotos of Friedrich Zawrel and Heinrich Gross">
                         <figcaption>
                             <em>'Convictee recognized NS physician in Austria's most
@@ -273,7 +273,7 @@
             <h2>Leave us a message</h2>
 
             <p>You can share your thoughts via the form below. Entries will be reviewed before being published on our <a
-                    href="guestbook.html">guestbook page</a>.</p>
+                    href="guestbook.html" class="violet-link">guestbook page</a>.</p>
 
 
             <div id="form">
@@ -286,13 +286,13 @@
                     </div>
 
                     <div>
-                        <label for="e-mail">E-Mail:</label>
-                        <input type="e-mail" id="e-mail" name="name" class="id">
+                        <label for="email">E-Mail:</label>
+                        <input type="email" id="email" name="name" class="id" required>
                     </div>
 
                     <div>
                         <label for="message">Your message:</label>
-                        <textarea id="message" name="message" rows="7" cols="30"></textarea>
+                        <textarea id="message" name="message" rows="7" cols="30" required></textarea>
 
                     </div>
                     <input type="submit" value="Send">
