Exchange images with smaller webp files

--- a/index.html
+++ b/index.html
@@ -162,8 +162,8 @@
                 </div>
                 <div id="spiegelhof-img">
                     <figure>
-                        <img src="assets/images/am-steinhof-areal-1932.jpg"
-                            alt="Areal view psychiatric clinic 'Am Steinhof', 1932">
+                        <img src="assets/images/am-steinhof-aerial-1932.webp"
+                            alt="Aerial view psychiatric clinic 'Am Steinhof', 1932">
                         <figcaption>
                             Areal view of the psychiatric
                             <br>clinic 'Am Steinhof', 1932
@@ -229,7 +229,7 @@
                 <p>Article in 1978, trials against Gross</p>
                 <div id="spiegelhof-img">
                     <figure>
-                        <img src="assets/images/artikel-kurier-1978-12-17.jpg"
+                        <img src="assets/images/artikel-kurier-1978-12-17.webp"
                             alt="Image of the 1978 newspaper article 'Ein Arzt aus der Mörderklinik' with fotos of Friedrich Zawrel and Heinrich Gross">
                         <figcaption>
                             <em>'Convictee recognized NS physician in Austria's most
@@ -273,7 +273,7 @@
             <h2>Leave us a message</h2>
 
             <p>You can share your thoughts via the form below. Entries will be reviewed before being published on our <a
-                    href="guestbook.html" class="violet-link">guestbook page</a>.</p>
+                    href="guestbook.html" class="ul-link">guestbook page</a>.</p>
 
 
             <div id="form">
