--- a/guestbook.html
+++ b/guestbook.html
@@ -62,7 +62,7 @@
 
         </table>
 
-        <p>To leave a message, visit the <a href="index.html#guestbook-form" class="violet-link">form</a> at the end of the home page.</p>
+        <p>To leave a message, visit the <a href="index.html#guestbook-form" class="ul-link">form</a> at the end of the home page.</p>
 
       </section>
     </main>
@@ -72,11 +72,11 @@
         <div id="socials-container">
             <ul id="socials">
                 <li>Find us on:</li>
-                <li><a href="https://www.facebook.com" target="_blank"><i class="fa-brands fa-square-facebook"></i></a>
+                <li><a href="https://www.facebook.com" aria-label="Go to our Facebook profile (opens in a new tab)" target="_blank"><i class="fa-brands fa-square-facebook"></i></a>
                 </li>
-                <li><a href="https://www.instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
-                <li><a href="https://mastodon.social" target="_blank"><i class="fa-brands fa-mastodon"></i></a></li>
-                <li><a href="https://www.tiktok.com" target="_blank"><i class="fa-brands fa-tiktok"></i></a></li>
+                <li><a href="https://www.instagram.com" aria-label="Link to our Instagram profile (opens in a new tab)" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
+                <li><a href="https://mastodon.social" aria-label="Link to our Mastodon profile (opens in a new tab)" target="_blank"><i class="fa-brands fa-mastodon"></i></a></li>
+                <li><a href="https://www.tiktok.com" aria-label="Link to our TikTok profile (opens in a new tab)" target="_blank"><i class="fa-brands fa-tiktok"></i></a></li>
             </ul>
         </div>
     </footer>
